# AlphaSwarm

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PROJECT_SPEC.md  README.md  docker-compose.yml  pyproject.toml  start
.github/workflows/: ci.yml
.planning/: .continue-here.md  BUGFIX-CONTEXT.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SESSION-2026-05-12-HANDOFF.md  STATE.md  v2.0-MILESTONE-AUDIT.md
.planning/debug/: parallel-swarm-serial-dispatch.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v3.0-MILESTONE-AUDIT.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v4.0-ROADMAP.md  v5.0-MILESTONE-AUDIT.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-ollama-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEWS.md  02-VALIDATION.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-resource-governance/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-REVIEWS.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-neo4j-graph-state/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-REVIEWS.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-seed-injection-and-agent-personas/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-RESEARCH.md  05-REVIEWS.md  05-VERIFICATION.md
.planning/phases/06-round-1-standalone/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-REVIEWS.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-rounds-2-3-peer-influence-and-consensus/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-REVIEWS.md  07-UI-SPEC.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-dynamic-influence-topology/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-RESEARCH.md  08-REVIEWS.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-tui-core-dashboard/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-HUMAN-UAT.md  09-RESEARCH.md  09-UI-SPEC.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
AlphaSwarm-2/: CONTRACT.md  index.html  styles.css  v2.html  v3.html
AlphaSwarm-2/src/: app.jsx  app_v2.jsx  bracket_deep.jsx  data.jsx  history.jsx  icons.jsx  interview_v2.jsx  modals.jsx  new_features.jsx  onboarding.jsx  panels.jsx  settings.jsx  states.jsx  tweaks.jsx  v2.jsx  viz.jsx
frontend/: .env.development  .gitignore  TESTING.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend-react-archive/: .gitignore  index.html  vite.config.ts
frontend-react-archive/src/: _smoke.tsx  styles.css  types.ts
frontend-vue-archive/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-vue-archive/src/: types.ts
frontend/design-reference/: Motion Spec.html  v2.html
frontend/src/: App.tsx  App.vue  data.ts  env.d.ts  main.ts  main.tsx  styles.css  types.ts
modelfiles/: Modelfile.orchestrator  Modelfile.worker
scripts/: backup_neo4j.sh  benchmark_seeds.json  compare_cycles.py  configure_ollama_app_env.sh  diagnose_sim.py  start_ollama.sh
src/alphaswarm/: __init__.py  __main__.py  app.py  batch_dispatcher.py  charts.py  cli.py  config.py  context_formatter.py  data_audit.py  enrichment.py  errors.py  governor.py  graph.py  interview.py  logging.py  market_data.py  memory_monitor.py  miro.py  ollama_client.py  ollama_models.py  parsing.py  portfolio.py  report.py  seed.py  simulation.py  state.py  ticker_validator.py  tui.py  types.py  utils.py  worker.py  write_buffer.py
tests/: conftest.py  test_advisory_synthesize.py  test_app.py  test_batch_dispatcher.py  test_charts.py  test_cli.py  test_config.py  test_context_formatter.py  test_data_audit.py  test_edges_route.py  test_enrichment.py  test_governor.py  test_graph.py  test_graph_integration.py  test_holdings_loader.py  test_holdings_types.py  test_inference_config.py  test_ingestion_types.py  test_integration_inference.py  test_interview.py  test_logging.py  test_market_data.py  test_memory_monitor.py  test_miro.py  test_models.py  test_network_gate.py  test_ollama_client.py  test_parsing.py  test_personas.py  test_pii_redaction.py  test_portfolio.py  test_portfolio_integration.py  test_providers.py  test_replay_red.py  test_report.py  test_rss_provider.py  test_security_hashing.py  test_seed.py  test_seed_pipeline.py  test_seed_pipeline_provider.py  (+15 more)
tests/inference/: fakes.py  test_anthropic_provider.py  test_budget.py  test_concurrency_protocol.py  test_factory.py  test_ollama_provider.py  test_openai_provider.py  test_openai_provider_real_providers.py  test_provider_contract.py  test_rate_limit.py  test_schema.py  test_types.py
tests/integration/: __init__.py  conftest.py  test_cloud_inference.py  test_holdings_route.py  test_rss_provider_live.py  test_socket_escape_hatch.py  test_yfinance_provider_live.py
tests/invariants/: __init__.py  conftest.py  test_holdings_isolation.py  test_importlinter_contract.py  test_importlinter_coverage.py  test_secret_isolation.py
tests/unit/: __init__.py  test_advisory.py  test_advisory_caffeinate.py  test_advisory_route.py  test_auto_advisory_trigger.py  test_edges_route.py  test_health_ollama_route.py  test_simulation_manager_auto_advisory.py  test_task5b_provider_migration.py
(+646 files in other folders)
