[project]
name = "alphaswarm"
version = "0.1.0"
description = "Multi-agent financial simulation engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "psutil>=7.2.2",
    "ollama>=0.6.1",
    "backoff>=2.2.1",
    "neo4j>=5.28,<6.0",
    "textual>=8.1.1",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff",
    "mypy",
    "import-linter==2.11",
    "pytest-socket==0.7.0",
    "hypothesis==6.152.1",
]

[project.scripts]
start = "alphaswarm.cli:main_tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--disable-socket --allow-unix-socket"
markers = [
    "enable_socket: opt-in marker for tests that need real network (D-12 escape hatch)",
]

[tool.mypy]
python_version = "3.11"
strict = true
