[project]
name = "alphaswarm"
version = "0.1.0"
description = "Multi-agent financial simulation engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
    "psutil>=7.2.2",
    "ollama>=0.6.1",
    "backoff>=2.2.1",
    "neo4j>=5.28,<6.0",
    "textual>=8.1.1",
    "jinja2>=3.1.6",
    "aiofiles>=25.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "yfinance>=1.2.2,<2.0",
    "feedparser>=6.0.12,<7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff",
    "mypy",
    "import-linter==2.11",
    "pytest-socket==0.7.0",
    "hypothesis==6.152.1",
]

[project.scripts]
start = "alphaswarm.cli:main_tui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--disable-socket --allow-unix-socket"
markers = [
    "enable_socket: opt-in marker for tests that need real network (D-12 escape hatch)",
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.importlinter]
root_package = "alphaswarm"

[[tool.importlinter.contracts]]
name = "Holdings isolation — only advisory and web.routes.holdings may import alphaswarm.holdings"
type = "forbidden"
source_modules = [
    "alphaswarm.app",
    "alphaswarm.batch_dispatcher",
    "alphaswarm.cli",
    "alphaswarm.config",
    "alphaswarm.context_formatter",
    "alphaswarm.errors",
    "alphaswarm.governor",
    "alphaswarm.graph",
    "alphaswarm.ingestion",
    "alphaswarm.ingestion.providers",
    "alphaswarm.ingestion.types",
    "alphaswarm.ingestion.yfinance_provider",
    "alphaswarm.ingestion.rss_provider",
    "alphaswarm.interview",
    "alphaswarm.logging",
    "alphaswarm.memory_monitor",
    "alphaswarm.miro",
    "alphaswarm.ollama_client",
    "alphaswarm.ollama_models",
    "alphaswarm.parsing",
    "alphaswarm.report",
    "alphaswarm.security",
    "alphaswarm.security.hashing",
    "alphaswarm.seed",
    "alphaswarm.simulation",
    "alphaswarm.state",
    "alphaswarm.tui",
    "alphaswarm.types",
    "alphaswarm.utils",
    "alphaswarm.worker",
    "alphaswarm.write_buffer",
    "alphaswarm.web",
    "alphaswarm.web.app",
    "alphaswarm.web.broadcaster",
    "alphaswarm.web.connection_manager",
    "alphaswarm.web.replay_manager",
    "alphaswarm.web.simulation_manager",
    "alphaswarm.web.routes",
    "alphaswarm.web.routes.edges",
    "alphaswarm.web.routes.health",
    "alphaswarm.web.routes.interview",
    "alphaswarm.web.routes.replay",
    "alphaswarm.web.routes.report",
    "alphaswarm.web.routes.advisory",
    "alphaswarm.web.routes.simulation",
    "alphaswarm.web.routes.websocket",
]
forbidden_modules = ["alphaswarm.holdings"]
# D-04 whitelist: alphaswarm.web.routes.holdings is the ONE permitted importer.
# alphaswarm.web.routes is listed in source_modules above (covers its submodules),
# but this route is intentionally exempted via ignore_imports so it can import
# alphaswarm.holdings and alphaswarm.holdings.loader at module scope.
ignore_imports = [
    "alphaswarm.web.routes.holdings -> alphaswarm.holdings",
    "alphaswarm.web.routes.holdings -> alphaswarm.holdings.loader",
    # Phase 41 D-20 (advisory wiring): the advisory route is in source_modules
    # (so the FastAPI layer keeps its forbidden-import coverage), but it must
    # be able to import the whitelisted alphaswarm.advisory package AND type-
    # annotate PortfolioSnapshot via a TYPE_CHECKING import. Both are allowed
    # because alphaswarm.advisory is itself on the D-04 whitelist.
    "alphaswarm.web.routes.advisory -> alphaswarm.advisory",
    "alphaswarm.web.routes.advisory -> alphaswarm.holdings.types",
]
